<resources>
    <string name="app_name">Khai ID</string>

    <string name="title_home">Home</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>


    <string name="first_name_ENG">Name</string>
    <string name="second_name_ENG">Second name</string>
    <string name="middle_name_ENG">Middle name</string>

    <string name="first_name_UKR">"Ім"+"'"+"я"</string>
    <string name="second_name_UKR">Прізвище</string>
    <string name="middle_name_UKR">По батькові</string>

    <string name="first_name_RUS">Имя</string>
    <string name="second_name_RUS">Фамилия</string>
    <string name="middle_name_RUS">Отчество</string>

    <string name="group_number">Your group number</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone number</string>



    <string name="sign_up">Sign Up</string>
    <string name="new_user">New user</string>
    <string name="change_date">Change Date</string>
    <string name="textexample">TextExample</string>

    <string name="new_course">New course</string>
    <string name="course_name_ENG">Course name</string>
    <string name="course_name_UKR">Назва курсу</string>
    <string name="course_name_RUS">Название курса</string>
    <string name="teacher">Teacher</string>
    <string name="new_teacher">New teacher</string>

    <string name="registration">Registration</string>

</resources>
