<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"


    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/new_course"
                android:textSize="24sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/course_name_ENG"

                android:inputType="textPersonName"
                android:labelFor="@+id/editText" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/course_name_UKR"
                android:inputType="textPersonName"
                android:labelFor="@+id/editText2" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/course_name_RUS"
                android:inputType="textPersonName"
                android:labelFor="@id/editText3" />



            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:paddingBottom="8dp"
                android:text="@string/sign_up" />

        </LinearLayout>



</ScrollView>